Add configuration variables for test configuration

--- a/cms.conf
+++ b/cms.conf
@@ -1,9 +1,23 @@
+########################################################################
+# Global settings
+########################################################################
 [global]
 base = /
 theme = theme/default
 
-# configure static pages
+########################################################################
+# Test settings
+########################################################################
+# 
+# these are only used when the cms is run from the console
 #
+[test]
+host = 10.0.0.2
+port = 8001
+
+########################################################################
+# Content settings
+########################################################################
 [pages]
 path = pages
 
