Add support for arbitrary static directories

--- a/cms.conf
+++ b/cms.conf
@@ -23,3 +23,9 @@ path = pages
 
 [apps]
 test = apps.test.Test
+
+########################################################################
+# Static files
+########################################################################
+[static]
+theme = /theme
