Implement basic menu support (flat menus)

--- a/cms.conf
+++ b/cms.conf
@@ -24,6 +24,18 @@ path = pages
 [apps]
 test = apps.test.Test
 
+# menu configuration
+
+[menus]
+# the menu "main" is listed in the "main_menu" section
+main = main_menu
+
+[main_menu]
+# 'index' makes the link go to / for now (modulated by base href in global)
+Home = index
+Test page = page
+Test app = test
+
 ########################################################################
 # Static files
 ########################################################################
