Setup for thomen.fi

--- a/cms.conf
+++ b/cms.conf
@@ -3,7 +3,7 @@
 ########################################################################
 [global]
 base = /
-theme = theme/default
+theme = theme/thomen
 
 ########################################################################
 # Test settings
@@ -18,11 +18,16 @@ port = 8001
 ########################################################################
 # Content settings
 ########################################################################
-[pages]
-path = pages
+[static]
+theme = /theme
+pebble = /pebble
 
 [apps]
-test = apps.test.Test
+#test = apps.test.Test
+weather = apps.weather.Weather
+
+[pages]
+path = pages
 
 # menu configuration
 
@@ -31,13 +36,5 @@ test = apps.test.Test
 main = main_menu
 
 [main_menu]
-# 'index' makes the link go to / for now (modulated by base href in global)
 Home = index
-Test page = page
-Test app = test
-
-########################################################################
-# Static files
-########################################################################
-[static]
-theme = /theme
+Weather = weather
