Add SNMP Sensors applet

--- a/cms.conf
+++ b/cms.conf
@@ -19,12 +19,13 @@ port = 8001
 # Content settings
 ########################################################################
 [static]
-theme = /theme
-pebble = /pebble
+# absolute web path = relative local path
+/theme = theme
+/pebble = pebble
+/apps/css = apps/css
 
 [apps]
-#test = apps.test.Test
-weather = apps.weather.Weather
+sensors = apps.sensors.Sensors
 
 [pages]
 path = pages
@@ -37,4 +38,12 @@ main = main_menu
 
 [main_menu]
 Home = index
-Weather = weather
+Sensors = sensors
+
+[sensors]
+hostname = 10.0.0.1
+community = public
+# numeric (don't use v2c)
+version = 2
+# SHANGTAI-MIB::sensors
+mib = .1.3.6.1.4.1.8072.9999.9999.1.1
