Update sample app, config and documentation to the updated applet api

--- a/cms.conf
+++ b/cms.conf
@@ -40,4 +40,5 @@ Test app = test
 # Static files
 ########################################################################
 [static]
-theme = /theme
+# Web path = local path relative to script
+/theme = theme
