--- a/cms.conf
+++ b/cms.conf
@@ -46,4 +46,4 @@ community = public
 # numeric (don't use v2c)
 version = 2
 # SHANGTAI-MIB::sensors
-mib = .1.3.6.1.4.1.8072.9999.9999.1.1
+oid = .1.3.6.1.4.1.8072.9999.9999.1.1
