Fixed mobile layout for the front page, linked the new sensors from the front page.

--- a/cms.conf
+++ b/cms.conf
@@ -35,9 +35,13 @@ path = pages
 [menus]
 # the menu "main" is listed in the "main_menu" section
 main = main_menu
+main-front = main_front
 
 [main_menu]
 Home = index
+Sensors = sensors
+
+[main_front]
 Sensors = sensors
 
 [sensors]
