Add domain services page, and move menus to the new file-based menu system

--- a/cms.conf
+++ b/cms.conf
@@ -34,16 +34,7 @@ path = pages
 # menu configuration
 
 [menus]
-# the menu "main" is listed in the "main_menu" section
-main = main_menu
-main-front = main_front
-
-[main_menu]
-Home = index
-Sensors = sensors
-
-[main_front]
-Sensors = sensors
+path = menus
 
 [sensors]
 hostname = 10.0.0.1
