Add let's encrypts .well-known directory to static files list

--- a/cms.conf
+++ b/cms.conf
@@ -20,6 +20,8 @@ port = 8001
 ########################################################################
 [static]
 # absolute web path = relative local path
+# Let's Encrypt
+/.well-known = .well-known
 /theme = theme
 /pebble = pebble
 /apps/css = apps/css
