Add basic logging support

--- a/cms.conf
+++ b/cms.conf
@@ -2,6 +2,8 @@
 # Global settings
 ########################################################################
 [global]
+# debug here is only for the dispatcher
+debug=False
 base = /
 theme = theme/default
 
