Add some logging to the sensors applet

--- a/cms.conf
+++ b/cms.conf
@@ -41,6 +41,8 @@ path = pages
 path = menus
 
 [sensors]
+# debug sensors applet
+debug=True
 hostname = 10.0.0.1
 community = public
 # numeric (don't use v2c)
