--- a/cms.conf
+++ b/cms.conf
@@ -24,11 +24,13 @@ port = 8001
 /.well-known = .well-known
 /theme = theme
 /pebble = pebble
-/apps/css = apps/css
-/apps/js = apps/js
+# XXX
+# this is not good, the apps should be able to manipulate the static
+# content path, so that we won't have to expose their source code
+/apps = apps
 
 [apps]
-sensors = apps.sensors.Sensors
+sensors = apps.sensors.sensors.Sensors
 
 [pages]
 path = pages
