Update config to use the full css/js paths of the sensor module rather than just exposing /apps

--- a/cms.conf
+++ b/cms.conf
@@ -24,10 +24,8 @@ port = 8001
 /.well-known = .well-known
 /theme = theme
 /pebble = pebble
-# XXX
-# this is not good, the apps should be able to manipulate the static
-# content path, so that we won't have to expose their source code
-/apps = apps
+/apps/sensors/css = apps/sensors/css
+/apps/sensors/js = apps/sensors/js
 
 [apps]
 sensors = apps.sensors.sensors.Sensors
