--- a/cms.conf
+++ b/cms.conf
@@ -22,8 +22,11 @@ port = 8001
 # absolute web path = relative local path
 # Let's Encrypt
 /.well-known = .well-known
+# theme files
 /theme = theme
+# pebble stuff
 /pebble = pebble
+# sensor files
 /apps/sensors/css = apps/sensors/css
 /apps/sensors/js = apps/sensors/js
 
@@ -45,3 +48,9 @@ community = public
 version = 2
 # SHANGTAI-MIB::sensors
 oid = .1.3.6.1.4.1.8072.9999.9999.1.1
+
+[sensor aliases]
+135 = Balcony, inside glazing
+167 = Balcony, railing outside glazing
+151 = Server closet
+183 = At my desk
