Add msgs applet

--- a/cms.conf
+++ b/cms.conf
@@ -32,6 +32,7 @@ port = 8001
 
 [apps]
 sensors = apps.sensors.sensors.Sensors
+messages = apps.msgs.msgs.Msgs
 
 [pages]
 path = pages
@@ -40,6 +41,10 @@ path = pages
 
 [menus]
 path = menus
+
+[messages]
+# For non-standard msgs
+# path = /var/msgs
 
 [sensors]
 hostname = 10.0.0.1
