--- a/cms.conf
+++ b/cms.conf
@@ -29,10 +29,13 @@ port = 8001
 # sensor files
 /apps/sensors/css = apps/sensors/css
 /apps/sensors/js = apps/sensors/js
+/apps/countdown/css = apps/countdown/css
+/apps/countdown/js = apps/countdown/js
 
 [apps]
 sensors = apps.sensors.sensors.Sensors
 messages = apps.msgs.msgs.Msgs
+countdown = apps.countdown.countdown.Countdown
 
 [pages]
 path = pages
